2011-01-23  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-print-this-url): Correction to my last, use string-width
	not length.

2011-01-13  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-goto-mailto-url): Decode entities in URL.

2011-01-11  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-print-this-url): If anchor-title plus url is wider than
	the frame then use two lines "Title\nURL".
	(w3m-about-header): Show anchor-title of link at point.

2011-01-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): If exist `title' in anchor, it adds to
	w3m-balloon-help property and puts it to w3m-anchor-title property.
	(w3m-print-this-url): Treat w3m-anchor-title property.

	* w3m-util.el (w3m-anchor-title): New macro.

2011-01-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fix-illegal-blocks): Fix FIXEDCASE and LITERAL options of
	replace-match to `t'.

2010-12-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-half-dump): Add name anchors that w3m can
	handle ([emacs-w3m:11153]).

2010-12-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-replace-regexps-in-string): Move from w3m-lnum.el;
	use w3m-replace-in-string instead of replace-regexp-in-string that is
	not available in XEmacs 21.4; make it a Lisp function.
	(w3m-string-match-p, w3m-substring-no-properties): New functions.

	* w3m-lnum.el (w3m-link-set-numbering): Use w3m-string-match-p instead
	of string-match-p that is not available in Emacs 21~22 and XEmacs.
	(w3m-read-int-interactive): Use w3m-substring-no-properties instead of
	substring-no-properties that is not available in Emacs 21, XEmacs 21.4,
	and SXEmacs.
	(w3m-linknum-follow): Remove the 5th arg passed to read-string.  It is
	not available in XEmacs.

2010-12-26  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el: Updated comments section.
	(w3m-link-numbering-mode-hook, w3m-link-numbering-mode-map):
	Updated doc string.
	(w3m-link-set-overlay): No more need for save-excursion.